crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_chunking_metadata_view_basic_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(resp, round_scores)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.79",
      "dataset": "qs_view",
      "matches": {
        "answer": [
          "\n2"
        ]
      },
      "primary_key": {
        "id": 612
      }
    },
    {
      "_score": "0.78",
      "dataset": "qs_view",
      "matches": {
        "answer": [
          " is 2."
        ]
      },
      "primary_key": {
        "id": 349
      }
    },
    {
      "_score": "0.55",
      "dataset": "qs_view",
      "matches": {
        "answer": [
          "\\times 2 \\times 2 \\times 2 = 32\\)"
        ]
      },
      "primary_key": {
        "id": 948
      }
    },
    {
      "_score": "0.55",
      "dataset": "qs_view",
      "matches": {
        "answer": [
          "\\times 2 \\times 2 \\times 2 = 32\\)"
        ]
      },
      "primary_key": {
        "id": 1277
      }
    }
  ]
}
