crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_chunking_metadata_view_keywords_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": 0.55,
      "dataset": "qs_view",
      "matches": {
        "answer": [
          "\\times 2 \\times 2 \\times 2 = 32\\)"
        ]
      },
      "primary_key": {
        "id": 1277
      }
    },
    {
      "_score": 0.53,
      "dataset": "qs_view",
      "matches": {
        "answer": [
          " divisors other than 1 and itself (e.g., 2, 3, 4, 6, 9, 12, 18)"
        ]
      },
      "primary_key": {
        "id": 484
      }
    },
    {
      "_score": 0.52,
      "dataset": "qs_view",
      "matches": {
        "answer": [
          "4, 2))^3 \\times 40}\\)"
        ]
      },
      "primary_key": {
        "id": 450
      }
    },
    {
      "_score": 0.47,
      "dataset": "qs_view",
      "matches": {
        "answer": [
          "\n$28 - 14 = 14$  \nThus, the missing number is $\\boxed{14}$"
        ]
      },
      "primary_key": {
        "id": 622
      }
    }
  ]
}
