crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_chunking_metadata_view_vector_search_sql_filters_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, answer, trunc(_score, 2) as _score FROM vector_search(qs_view, 'secondary', answer) where subject!='math' order by _score desc, id LIMIT 4"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                           |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: _score DESC NULLS FIRST, vector_search(qs_view, Utf8("secondary"), answer).id ASC NULLS LAST, fetch=4                                                                                                                                                    |
|               |   Projection: vector_search(qs_view, Utf8("secondary"), answer).id, vector_search(qs_view, Utf8("secondary"), answer).answer, trunc(vector_search(qs_view, Utf8("secondary"), answer)._score, Int64(2)) AS _score                                              |
|               |     TableScan: vector_search(qs_view, Utf8("secondary"), answer) projection=[_score, answer, id], full_filters=[vector_search(qs_view, Utf8("secondary"), answer).subject != Utf8("math")]                                                                     |
| physical_plan | SortPreservingMergeExec: [_score@2 DESC, id@0 ASC NULLS LAST], fetch=4                                                                                                                                                                                         |
|               |   SortExec: TopK(fetch=4), expr=[_score@2 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                             |
|               |     ProjectionExec: expr=[id@0 as id, answer@2 as answer, trunc(_score@1, 2) as _score]                                                                                                                                                                        |
|               |       FilterExec: subject@3 != math, projection=[id@0, _score@1, answer@2]                                                                                                                                                                                     |
|               |         HashJoinExec: mode=CollectLeft, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@0)], projection=[id@0, _score@1, answer@2, subject@4]                                                                                                 |
|               |           CoalescePartitionsExec                                                                                                                                                                                                                               |
|               |             AggregateExec: mode=FinalPartitioned, gby=[id@0 as id], aggr=[first_value(_score) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as _score, first_value(_spice.search_field) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as answer] |
|               |               RepartitionExec: partitioning=Hash([id@0], 3), input_partitions=3                                                                                                                                                                                |
|               |                 AggregateExec: mode=Partial, gby=[id@0 as id], aggr=[first_value(_score) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as _score, first_value(_spice.search_field) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as answer]      |
|               |                   ProjectionExec: expr=[union_extract(json_get(key@1, id), int) as id, _spice.search_field@0 as _spice.search_field, 1 - distance@2 as _score]                                                                                                 |
|               |                     BytesProcessedExec                                                                                                                                                                                                                         |
|               |                       RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                     |
|               |                         S3VectorsQueryExec (INDEX_NAME_1): limit=100                                                                                                                                                                                           |
|               |           RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                 |
|               |             FilterExec: subject@1 != math                                                                                                                                                                                                                      |
|               |               SchemaCastScanExec                                                                                                                                                                                                                               |
|               |                 BytesProcessedExec                                                                                                                                                                                                                             |
|               |                   DataSourceExec: partitions=1, partition_sizes=[1]                                                                                                                                                                                            |
|               |                                                                                                                                                                                                                                                                |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
